--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "f646b98a",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "import tensorflow as tf\n",
-    "from tensorflow.keras import layers, models"
+    "from tensorflow.keras import layers, models\n",
+    "import pickle"
    ]
   },
   {
@@ -692,6 +693,25 @@
    ],
    "source": [
     "model.evaluate(xtest,ytest)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5eab3e53",
+   "metadata": {},
+   "source": [
+    "### We got the accuracy of 99% and auc of 99% "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "cdd946cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"model.pkl\", \"wb\") as file:\n",
+    "    pickle.dump(model, file)"
    ]
   }
  ],
